[package]
name = "claude-code-explorer"
version = "0.1.0"
description = "Browse and search your Claude Code session history"
authors = ["Myles Nosa"]
edition = "2021"

[lib]
name = "claude_code_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
walkdir = "2"
tauri-plugin-shell = "2.3.5"

